# BAS

./: .gitignore  NOTICE  README.md  environment_bas-3-0-0.yml  environment_bas.yml  environment_bas_py310.yml  environment_bas_py38.yml  environment_bas_up.yml  pyproject.toml  setup.cfg  setup.py
bas/: __init__.py  basprocessor.py  constants.py  rivergeomproduct.py  sections_reduction.py  tools.py  watermask.py  widths.py
examples/: example_nodes_cplx_up.dbf  example_reaches_cplx.dbf  example_surfwater.py  run_bas_processing_example.py
tests/: test_result_reproductibility.py  test_unit.py  unit_centerline_1.dbf  unit_centerline_1.shp  unit_centerline_1.shx  unit_centerline_2.dbf  unit_centerline_2.shp  unit_centerline_2.shx  unit_centerline_3.dbf  unit_centerline_3.shp  unit_centerline_3.shx  unit_sections_1.dbf  unit_sections_1.shp  unit_sections_1.shx  unit_sections_2.dbf  unit_sections_2.shp  unit_sections_3.dbf  unit_sections_3.shp  unit_sections_3.shx  unit_watermask_1.tif  unit_watermask_2.tif  unit_watermask_3.tif
