# Copyright (C) 2024 CNES.
#
# This file is part of BAS (Buffer Around Sections)
#
#     https://github.com/CS-SI/BAS
#
# Authors:
#     Charlotte Delmas
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = bas
author = Charlotte Emery
author_email = charlotte.emery@cs-soprasteria.com
url = https://github.com/CS-SI/BAS
project_urls =
    Source =
    Documentation =
description = Buffer Around Sections
long_description = file:README.md
long_description_content_type = text/markdown
license =
license_files = LICENSE
platform = any
keywords:
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.8

setup_requires =
    setuptools_scm # Following https://pypi.org/project/setuptools-scm/

# shareloc packages dependencies
install_requires =
    gdal
    geopandas
    rasterio

package_dir =
    . = bas
packages = find:

[options.extras_require]
# [dev] mode dependencies: include notebook and doc
dev =
    pytest
    pytest-cov
    pytest-timestamper
    pre-commit
    isort>=5.8.0                  # Check imports
    black>=21.5b0                 # PEP8 format code
    flake8<6.0.0                  # General linter
    flake8-copyright>=0.2.2       # Check copyrights
    flake8-comprehensions>=3.4.0  # Check list/dict/set
    flake8-bugbear>=21.4.3        # Add some rules to flake8
    pylint                        # General linter with more rules
    mypy
    setuptools_scm                # version from git tag
    virtualenv
    configupdater
    check-json
    twine                         # for pypi upload
    sphinx                        # for doc
    sphinx-rtd-theme              # for doc

# [doc] mode dependencies
doc =
    sphinx
    sphinx-rtd-theme

# [notebook] mode dependencies
notebook =
    jupyterlab

# Specify no universal wheel supported (only Python3)
[bdist_wheel]
universal = false

# Flake8 configuration
[flake8]
exclude = .git, venv, build, dist,
# Add flake8 ignored rules
ignore =
# from black compatibility
extend-ignore = E203, W503
max-complexity = 15
max-line-length = 120
#show-source = true
# Flake8-copyright
copyright-check = False
# errors types are not selected by default, so add them to your selection
select = E,F,W,C,B9,C4,B

[pylint]
max-line-length = 120

[options.entry_points]
console_scripts =
  run_bas = examples.example_surfwater:main
  run_examples = examples.run_bas_processing_example:main
